[tool.poetry]
name = "repl_python3_sdhgf9d"
version = "0.1.0"
description = ""
authors = ["nokil8866 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
GitPython = "^3.1.27"
discord-py-slash-command = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
